fixed TaskHeader alignment

--- a/src/components/TaskList/TaskTabs/TaskItem/TaskHeader/index.scss
+++ b/src/components/TaskList/TaskTabs/TaskItem/TaskHeader/index.scss
@@ -7,5 +7,5 @@
 
 .taskName {
   margin: 0px;
-  padding-left: 5px;
+  padding-left: 12px;
 }
